# cargo-orm

./: .gitignore  Cargo.toml  README.md  prek.toml
.github/workflows/: rust.yaml
crates/cargo-orm-core/: Cargo.toml
crates/cargo-orm-core/src/: lib.rs
crates/cargo-orm-core/src/dialect/: mod.rs  sql_dialect.rs
crates/cargo-orm-core/src/driver/: connection.rs  connection_config.rs  connection_pool.rs  error.rs  executor.rs  mod.rs  sql_driver.rs  transaction.rs
crates/cargo-orm-core/src/error/: error.rs  mod.rs
crates/cargo-orm-core/src/model/: repository.rs
crates/cargo-orm-core/src/query/: delete.rs  insert.rs  mod.rs  query_type.rs  select.rs  (+3 more)
crates/cargo-orm-macros/: Cargo.toml
crates/cargo-orm-macros/src/: lib.rs
crates/cargo-orm-test/: Cargo.toml
crates/cargo-orm-test/src/: lib.rs  test_entities.rs
crates/cargo-orm-test/src/dialect/: mod.rs
crates/cargo-orm-test/src/from_row_impl/: sqlite_row_test.rs
crates/cargo-orm-test/src/query/: delete_tests.rs  insert_tests.rs  mod.rs  select_tests.rs  update_tests.rs  where_coniditon_test.rs
crates/cargo-orm-test/src/query/snapshots/: cargo_orm_test__query__select_tests__tests__select_create_from_table_schema_sqlite.snap
crates/cargo-orm-test/src/repository_test/: mod.rs  save_test.rs
crates/cargo-orm-test/src/sqlite_tests/: mod.rs
crates/corrosion-orm-core/: Cargo.toml
crates/corrosion-orm-core/src/: lib.rs
crates/corrosion-orm-macros/: Cargo.toml
crates/corrosion-orm-macros/src/: lib.rs
crates/corrosion-orm-test/: Cargo.toml
crates/corrosion-orm-test/src/: lib.rs  test_entities.rs
(+54 files in other folders)
